# fpvcar-devicecontrol

./: .gitmodules  CMakeLists.txt  readme.md
config/: default_config.json
docs/: README_IPC_TEST.md  devicecontrol功能.md  ipc-server优化.md  motor-api.md  与gateway通信的json格式.md  安全性分析与改进建议.md  软件结构.md
include/fpvcar_device_control/: config.hpp  control_loop.hpp  desired_state.hpp  device_control_service.hpp  ipc_server.hpp  request_handler.hpp  watch_dog.hpp
scripts/: README_IPC_TEST.md  test_ipc.sh
src/: config.cpp  control_loop.cpp  desired_state.cpp  device_control_service.cpp  ipc_server.cpp  main.cpp  request_handler.cpp  watch_dog.cpp
